fix error on mobile

--- a/src/utils/components/AccountLayout/styles/full-hd.scss
+++ b/src/utils/components/AccountLayout/styles/full-hd.scss
@@ -14,8 +14,8 @@
   min-height: 1220px;
   max-width: 1220px;
   max-height: 1220px;
-  filter: blur(300px);
   position: absolute;
+  display: none;
   z-index: 1;
 }
 
